--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -52,6 +52,11 @@
 		display:none;
     }
 }
+@media (max-width: 550px){
+   .logo-design {
+       background-color: #00305B
+   }
+}
 .single_plan__block.blue__block::before {
     background: #feb20d;
 }
